--- a/crown/src/pages/sing-in-and-sing-up/sing-in-and-sing-up.styles.scss
+++ b/crown/src/pages/sing-in-and-sing-up/sing-in-and-sing-up.styles.scss
@@ -1,5 +1,5 @@
 .sing-in-and-sing-up {
-  width: 850px;
+  // width: 850px;
   display: flex;
   justify-content: space-between;
   margin: 30px auto;
